--- a/05-dom-document-loading/1-notification/index.html
+++ b/05-dom-document-loading/1-notification/index.html
@@ -6,16 +6,13 @@
 </head>
 
 <button id="btn1">Show simple message!</button>
-
+<div id="div"></div>
 <script type="module">
   import NotificationMessage from './index.js';
 
+  
   btn1.addEventListener('click', () => {
-    const notification = new NotificationMessage('Hello World', {
-      duration: 2000,
-      type: 'success'
-    });
-
-    notification.show();
+    const notification = new NotificationMessage('hi');
+    notification.show(div);
   });
 </script>
