--- a/05-dom-document-loading/1-notification/index.html
+++ b/05-dom-document-loading/1-notification/index.html
@@ -12,7 +12,10 @@
 
   
   btn1.addEventListener('click', () => {
-    const notification = new NotificationMessage('hi');
+    const notification = new NotificationMessage('Hello World', {
+      duration: 2000,
+      type: 'success'
+    });
     notification.show(div);
   });
 </script>
