--- a/05-dom-document-loading/2-sortable-table-v1/index.html
+++ b/05-dom-document-loading/2-sortable-table-v1/index.html
@@ -69,7 +69,7 @@
     },
   ];
 
-  const sortableTable = new SortableTable(headerConfig, data);
+  const sortableTable = new SortableTable(headerConfig, { data });
 
   root.append(sortableTable.element);
 
